2005-03-14  mallum,,,  <mallum@openedhand.com>

	* settings-daemon.c: (main):
	Fork much ealier

2005-02-04  mallum,,,  <mallum@openedhand.com>

	* README:
	Add some content

2005-02-04  mallum,,,  <mallum@openedhand.com>

	* Makefile.am:
	Fix. Add required autofoo README etc ..