@@ -1,3 +1,8 @@
+2005-10-03  Ross Burton  <ross@burtonini.com>
+
+	* settings-daemon.c:
+	Add stylus mode, fix toolbar mode, monitor gnome keys for changes.
+
 2005-03-14  mallum,,,  <mallum@openedhand.com>
 
 	* settings-daemon.c: (main):
